cherry-pick warning to released manual

--- a/manual.html
+++ b/manual.html
@@ -1321,6 +1321,9 @@ before building the targets requested by the user.</p></div>
 </div>
 <div class="sect2">
 <h3 id="_pools">Pools</h3>
+<div class="paragraph"><p><strong>Note: pools were added as an experiment and may be removed in a future
+version of Ninja.  Are they useful for you?  Let us know on the mailing
+list.</strong></p></div>
 <div class="paragraph"><p>Pools allow you to allocate one or more rules or edges a finite number
 of concurrent jobs which is more tightly restricted than the default
 parallelism.</p></div>
@@ -1781,7 +1784,7 @@ value to prevent it from getting expanded twice.</p></div>
 <div id="footer">
 <div id="footer-text">
 Version 1.1.0<br />
-Last updated 2013-02-01 10:32:11 PST
+Last updated 2013-02-01 10:39:53 PST
 </div>
 </div>
 </body>
